--- a/Demo Apps/Week 7/GridDemoLayout/GridDemoLayout/GridDemoLayoutPage.xaml
+++ b/Demo Apps/Week 7/GridDemoLayout/GridDemoLayout/GridDemoLayoutPage.xaml
@@ -3,5 +3,6 @@
     <StackLayout>
         <Button Text="Show Flag (XAML)" Clicked="HandleShowFlagXaml_Clicked" />
         <Button Text="Show Flag (C#)" Clicked="HandleShowFlagCS_Clicked" />
+        <Button Text="TMNT" Clicked="HandleTmnt_Clicked" />
     </StackLayout>
 </ContentPage>
