--- a/Demo Apps/Week 8/UndehydrationCalculator/UndehydrationCalculator/UndehydrationCalculatorPage.xaml
+++ b/Demo Apps/Week 8/UndehydrationCalculator/UndehydrationCalculator/UndehydrationCalculatorPage.xaml
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:UndehydrationCalculator" x:Class="UndehydrationCalculator.UndehydrationCalculatorPage">
-	<Label Text="Welcome to Xamarin Forms!" VerticalOptions="Center" HorizontalOptions="Center" />
+    <StackLayout>
+
+        <Button Clicked="Button_Clicked" Text="Play Audio!!" />
+
+    </StackLayout>
 </ContentPage>
