--- a/Demo Apps/Week 9/DemoAsyncAwait/DemoAsyncAwait/DemoAsyncAwaitPage.xaml
+++ b/Demo Apps/Week 9/DemoAsyncAwait/DemoAsyncAwait/DemoAsyncAwaitPage.xaml
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:DemoAsyncAwait" x:Class="DemoAsyncAwait.DemoAsyncAwaitPage">
-    <Button Text="Synchronous Demo" x:Name="SynchronousButton" Clicked="SynchronousButton_Clicked" />
-    <Button Text="Asynchronous Demo" x:Name="AsynchronousButton" Clicked="AsynchronousButton_Clicked" />
+    <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
+        <Button Text="Synchronous Demo" x:Name="SynchronousButton" Clicked="SynchronousButton_Clicked" />
+        <Button Text="Asynchronous Demo" x:Name="AsynchronousButton" Clicked="AsynchronousButton_Clicked" />
+    </StackLayout>
+    
 </ContentPage>
