--- a/Demo Apps/Week 9/FeedReader/FeedReader/FeedReader/FeedListMvvm/FeedListMvvmPage.xaml
+++ b/Demo Apps/Week 9/FeedReader/FeedReader/FeedReader/FeedListMvvm/FeedListMvvmPage.xaml
@@ -2,25 +2,31 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:FeedReader"
+             Title="{Binding Model.Title}"
              x:Class="FeedReader.FeedListMvvm.FeedListMvvmPage">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
+            <RowDefinition />
         </Grid.RowDefinitions>
-        <Label Text="{Binding Title}" FontSize="32" VerticalOptions="Center" HorizontalOptions="Center" Margin="10" />
-        <ListView ItemsSource="{Binding Model.Articles}" Grid.Row="1">
+        <Label Text="NEWS" />
+        <ListView Grid.Row="1" ItemsSource="{Binding Model.Articles}" HasUnevenRows="True">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="100" />
-                        </Grid.RowDefinitions>
-                        <Label Text="TEST" />
-                        <!--<local:HyperlinkLabel Uri="{Binding Url}" Text="{Binding Title}" />
-                        <Label Text="{Binding Description}" />-->
-                    </Grid>
+                    <ViewCell>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="100" />
+                            </Grid.RowDefinitions>
+                            <local:HyperlinkLabel Uri="{Binding Url}" Text="{Binding Title}" />
+                            <WebView Grid.Row="1">
+                                <WebView.Source>
+                                    <HtmlWebViewSource Html="{Binding Description}" />
+                                </WebView.Source>
+                            </WebView>
+                        </Grid>
+                    </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
