--- a/Demo Apps/Week 8/FamilyList/FamilyList/FamilyList/AddFamilyMemberPage.xaml
+++ b/Demo Apps/Week 8/FamilyList/FamilyList/FamilyList/AddFamilyMemberPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              Title="Add Family Member"
              x:Class="FamilyList.AddFamilyMemberPage">
     <ScrollView>
@@ -24,7 +25,7 @@
             <Entry Grid.Row="1" Grid.Column="1" x:Name="LastNameEntry" />
 
             <Label Grid.Row="2" Grid.Column="0" Text="Birth Date" HorizontalTextAlignment="End" />
-            <DatePicker Grid.Row="2" Grid.Column="1" x:Name="BirthDatePicker" />
+            <DatePicker Grid.Row="2" Grid.Column="1" x:Name="BirthDatePicker" MinimumDate="1900/01/01" MaximumDate="{Binding Source={x:Static sys:DateTime.Today}}" />
 
             <Button Grid.Row="3" Grid.ColumnSpan="2" Text="Add Family Member" HorizontalOptions="Center" VerticalOptions="Center" Clicked="AddFamilyMember_Clicked" />
 
