--- a/Demo Apps/Week 8/FamilyList/FamilyList/FamilyList/FamilyListPage.xaml
+++ b/Demo Apps/Week 8/FamilyList/FamilyList/FamilyList/FamilyListPage.xaml
@@ -17,7 +17,7 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Label Text="Family Members" Grid.Row="0" HorizontalTextAlignment="Center" FontSize="Large" />
-        <ListView Grid.Row="1" x:Name="FamilyListView">
+        <ListView Grid.Row="1" x:Name="FamilyListView" HasUnevenRows="True">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
