--- a/Demo Apps/Week 9/FamilyListSQLite/FamilyList/FamilyList/FamilyListPage.xaml
+++ b/Demo Apps/Week 9/FamilyListSQLite/FamilyList/FamilyList/FamilyListPage.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:FamilyList"
@@ -38,6 +38,6 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Button Grid.Row="2" Text="Add Family Member" Clicked="AddFamilyMemberButton_Clicked" />
+        <Button Grid.Row="2" Text="Add Family Member" Clicked="AddFamilyMemberButton_Clicked" x:Name="AddButton" />
     </Grid>
 </ContentPage>
